등수별 당첨 횟수 실제 표기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -258,7 +258,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/unranked"/>
             <TextView
-                android:id="@+id/unrankTxt"
+                android:id="@+id/unrankedTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
