--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
-                android:text="1"/>
+                android:text="3"/>
 
             <TextView
                 android:id="@+id/myNumTxt02"
@@ -97,35 +97,35 @@
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:layout_marginLeft="10dp"
-                android:text="7"/>
+                android:text="11"/>
             <TextView
                 android:id="@+id/myNumTxt03"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:layout_marginLeft="10dp"
-                android:text="12"/>
+                android:text="23"/>
             <TextView
                 android:id="@+id/myNumTxt04"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:layout_marginLeft="10dp"
-                android:text="16"/>
+                android:text="27"/>
             <TextView
                 android:id="@+id/myNumTxt05"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:layout_marginLeft="10dp"
-                android:text="18"/>
+                android:text="35"/>
             <TextView
                 android:id="@+id/myNumTxt06"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:layout_marginLeft="10dp"
-                android:text="42"/>
+                android:text="41"/>
 
         </LinearLayout>
         <Button
@@ -134,6 +134,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/buy_one_lotto"/>
+        <Button
+            android:id="@+id/buyAutoLottoBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/buy_auto_lotto"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
